# KryptonLogger

./: CMakeLists.txt  README.md
include/kr/: ConsoleSink.hpp  FileSink.hpp  ISink.hpp  LogLevel.hpp  Logger.hpp  Sink.hpp  logs.hpp
include/kr/internal/: Logger.tpp  pch.hpp
src/: ConsoleSink.cpp  FileSink.cpp  Logger.cpp  Sink.cpp
